...
    <string name="home_menu_medicines">MEDICINES</string>
    <string name="home_menu_schedules">SCHEDULES</string>
    <string name="home_menu_pharmacies"> </string>
    <string name="home_menu_plantrip">  </string>
    <string name="action_bar_title_today">Today</string>
    <string name="action_bar_title_home">Home</string>
    <string name="medicine">medicine</string>

    <string-array name="home_action_list">
        <item>Medicine Manager</item>
        <item>Routines</item>
        <item>Medicines</item>
        <item>Schedules</item>
...


    <!-- Schedule creation -->
    <string name="summary_title">Check and confirm</string>
    <string name="title_activity_schedule_list">Schedules</string>
    <string name="add_schedule_button">ADD SCHEDULE</string>
    <string name="summary">Summary</string>

    <!-- Med presentations -->
    <string name="injections">Injections</string>
    <string name="pills">Pills</string>
    <string name="capsules">Capsules</string>
    <string name="inhaler">Inhaler</string>
...
    <string name="pomade">Pomade</string>
    <string name="syrup">Syrup</string>
    <string name="spray">Spray</string>
    <string name="patches">Patches</string>
    <string name="unknown">Unknown</string>
    <string name="effervescent">Effervescent</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_type">Schedule type</string>

    <!-- Med presentation units -->
    <string name="injections_units">injections</string>
    <string name="pills_units">pill</string>
    <string name="capsules_units">capsule</string>
...
        <item>30</item>
        <item>60</item>
    </integer-array>


    <!-- Default routines -->
    <string name="routine_breakfast">Breakfast</string>
    <string name="routine_lunch">Lunch</string>
    <string name="routine_dinner">Dinner</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_notification_title_template">%1$s</string>
    <string name="message_notification_placeholder_text_template">%1$s</string>
    <string name="action_take_now">Take now</string>
...
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="schedule_day_selector_mo">MO</string>
    <string name="schedule_day_selector_tu">TU</string>
    <string name="schedule_day_selector_we">WE</string>
    <string name="schedule_day_selector_th">TH</string>
    <string name="schedule_day_selector_fr">FR</string>
    <string name="schedule_day_selector_sa">SA</string>
    <string name="schedule_day_selector_su">SU</string>
    <string name="agenda_zoom_meds_time">It\'s time to take some meds!</string>
    <string name="create_schedule_unselected_med">Select a med in order to create a schedule</string>
    <string name="create_schedule_incomplete_items">Select routines for all your intakes</string>
    <string name="create_schedule_incomplete_doses">Doses must be greater than zero</string>
    <string name="home_no_pending_meds_message">There are no pending meds for today</string>
...
