<!--
  ~    Medicine Manager - An assistant for personal medication management.
  ~    Copyright (C) 2016 CITIUS - USC
  ~
  ~    Medicine Manager is free software; you can redistribute it and/or modify
  ~    it under the terms of the GNU General Public License as published by
  ~    the Free Software Foundation; either version 3 of the License, or
  ~    (at your option) any later version.
  ~
  ~    This program is distributed in the hope that it will be useful,
  ~    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~    GNU General Public License for more details.
  ~
  ~    You should have received a copy of the GNU General Public License
  ~    along with this software.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
                android:paddingTop="@dimen/status_bar_height">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs"
        android:background="#fff" />

    <ImageView
        android:id="@+id/tabs_shadow"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/textView2"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/daily_view_list_item_tab_shadow_top" />

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:background="@color/android_blue_dark"-->
    <!--android:elevation="3dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="56dp" />-->

    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/tabs_shadow"
        android:layout_marginTop="20dp" />

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/dark_grey_home"
        android:title="@string/title_create_schedule_activity"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/toolbar"
        android:background="@color/dark_grey_home"
        android:gravity="top"
        android:paddingLeft="72dp"
        android:paddingTop="10dp"
        android:text="@string/title_create_schedule_activity"
        android:textColor="#fff"
        android:textSize="24sp" />

    <!--<com.melnykov.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/add_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginRight="38dp"-->
        <!--android:layout_marginTop="83dp"-->
        <!--android:src="@drawable/ic_done_white_36dp"-->
       <!--fab:fab_colorNormal="#efefef"-->
       <!--fab:fab_colorPressed="#b7b7b7"-->
       <!--fab:fab_colorRipple="#b1b1b1" />-->

    <com.getbase.floatingactionbutton.FloatingActionButton
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="38dp"
        android:layout_marginTop="78dp"
        fab:fab_icon="@drawable/ic_done_black_48dp"
        fab:fab_colorNormal="#efefef"
        fab:fab_colorPressed="#b7b7b7"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:gravity="bottom"
        android:paddingLeft="72dp"
        android:text="@string/title_activity_schedules"
        android:textColor="#fff"
        android:textSize="14sp" />


</RelativeLayout>


