...
            android:visibility="visible"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="#aaefefef" />

        <Spinner
            android:id="@+id/schedules_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedule_label"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
...
